# synabon

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml  setup.py
notebooks/: baseline.ipynb  example_v2.ipynb  examples.ipynb
synabon/: main.py  utils.py
synabon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
synabon/sample/: __init__.py  random_sample.py  stratified_sample.py
synabon/split/: __init__.py  bucket.py  random_split.py
synabon/stat/: __init__.py  stat_generator.py
synabon/theoretical_tools/: __init__.py  theoretical_tools.py
synabon/users/: __init__.py  schemas.py  user.py  utils.py
