[tool.poetry]
name = "synabon"
version = "0.1.0"
description = ""
authors = ["Kirill Duvakin <kbduvakin1@mts.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
