[tool.poetry]
name = "synabon"
version = "0.1.0"
description = ""
authors = ["Kirill Duvakin <kbduvakin1@mts.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.25.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
jupyter = "^1.0.0"
pandas = "^2.1.0"
matplotlib = "^3.7.3"
seaborn = "^0.12.2"
scipy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
